首頁樣式布局

--- a/src/assets/styles/custom/common.scss
+++ b/src/assets/styles/custom/common.scss
@@ -1,3 +1,8 @@
 body {
   font-family: '微軟正黑體', 'PingFang SC', 'Arial', 'Helvetica', sans-serif;
 }
+
+#app {
+  background: #f5f5f5;
+  user-select: none;
+}
