add: 完成頂部購物車功能

--- a/src/assets/styles/custom/common.scss
+++ b/src/assets/styles/custom/common.scss
@@ -4,9 +4,24 @@ body {
 
 #app {
   background: #f5f5f5;
-  user-select: none;
 }
 
 a {
   text-decoration: none;
+}
+
+// 字數限制
+.ellipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.ellipsis-2 {
+  word-break: break-all;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
