--- a/src/assets/styles/custom/common.scss
+++ b/src/assets/styles/custom/common.scss
@@ -1,5 +1,6 @@
 body {
-  font-family: '微軟正黑體', 'PingFang SC', 'Arial', 'Helvetica', sans-serif;
+  font-family: 'Microsoft JhengHei', 'PingFang SC', 'Arial', 'Helvetica',
+    sans-serif;
 }
 
 #app {
